basic clue and note display

--- a/src/static/crosspad.scss
+++ b/src/static/crosspad.scss
@@ -152,10 +152,12 @@ html, body {
 .crosspad-clue-number {
     display: table-cell;
     padding-right: 0.625rem;
+    background-color: rgb(240, 255, 240);
 }
 
 .crosspad-clue-text {
     display: table-cell;
+    background-color: rgb(240, 255, 240);
 }
 
 .crosspad-clue-current {
